Fix: reduced z-index for sidebar

--- a/assets/scss/frontend/course-list.scss
+++ b/assets/scss/frontend/course-list.scss
@@ -18,7 +18,7 @@
         top: 0;
         height: 100%;
         background: #fbfbfb;
-        z-index: 9999;
+        z-index: 999;
         padding: 80px 20px 20px;
         border-left: 1px solid $gray;
         overflow: auto;
